--- a/projectduantotnghiep/font_end_reactjs/package.json
+++ b/projectduantotnghiep/font_end_reactjs/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
     "formik": "^2.2.9",
+    "js-base64": "^3.7.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-animate-images": "^0.1.4",
