--- a/projectduantotnghiep/sever_webblog/.env
+++ b/projectduantotnghiep/sever_webblog/.env
@@ -1,7 +1,7 @@
 PORT : 3800 >1800.
-DB_link = "mongodb+srv://admin:gSyUpYDS2rhBmJpu@blogchiasekienthuc-thuc.wjtja.mongodb.net/blogchiasekienthuc?retryWrites=true&w=majority"
-GMAIL_ADMIN = quocdatcao5@gmail.com
-GMAIL_PASS = 0354492575
+DB_link = "link-your-mongodb"
+GMAIL_ADMIN = email account 
+GMAIL_PASS = your email password
 ACCESS_TOKEN_LIFE = 120
 REFRESH_TOKEN_LIFE = 864000
 ACCESS_TOKEN_SECRET = chap10thanghacker
